--- a/perepodgotovka.html
+++ b/perepodgotovka.html
@@ -675,7 +675,7 @@
                         <a href="about.html" class="active">О себе</a>
                         <ul class="submenu">
                             <li><a href="obrazovanie.html" class="active">Образование</a></li>
-                            <li><a href="perepodgotovka.html">Переподготовка и повышение квалификации</a></li>
+                            <li><a href="perepodgotovka.html" style="font-weight: 700; color: var(--color-primary);">Переподготовка и повышение квалификации</a></li>
                             <li><a href="nagrady.html">Награды и достижения</a></li>
                         </ul>
                     </li>
@@ -890,12 +890,21 @@
                 </ul>
             </div>
         </div>
-        <div class="footer-bottom">
-            <p>&copy; 2025 Дёмин Александр Юрьевич. Все права защищены.</p>
-            <p style="margin-top: 0.5rem; font-size: 0.85rem;">При создании некоторых материалов сайта использовались инструменты искусственного интеллекта.<br>
-            Все материалы проверены и адаптированы в соответствии с требованиями ФГОС.</p>
-        </div>
-    </footer>
+       
+    <!-- ✅ АВТОМАТИЧЕСКИЙ ГОД -->
+    <div class="footer-bottom">
+        <p>&copy; 2025–<span id="currentYear"></span> Дёмин Александр Юрьевич. Все права защищены.</p>
+        <p style="margin-top: 0.5rem; font-size: 0.85rem;">
+            При создании некоторых материалов сайта использовались инструменты искусственного интеллекта (Claude AI, Perplexity AI, Suno AI и др.).<br>
+            Все материалы проверены и адаптированы в соответствии с требованиям ФГОС.
+        </p>
+    </div>
+</footer>
+
+<!-- ✅ СКРИПТ ОБНОВЛЕНИЯ ГОДА -->
+<script>
+    document.getElementById('currentYear').textContent = new Date().getFullYear();
+</script>
 
     <script>
         // Мобильное меню
@@ -1770,6 +1779,7 @@ window.addEventListener('load', () => {
 </body>
 
 </html>
+
 
 
 
